manifests/dev/pinchflat/Namespace-pinchflat.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  name: pinchflat
