manifests/dev/pinchflat/Service-pinchflat.yaml
apiVersion: v1
kind: Service
metadata:
  name: pinchflat
  namespace: pinchflat
spec:
  ports:
    - name: http
      port: 8945
      protocol: TCP
      targetPort: 8945
  selector:
    app.kubernetes.io/name: pinchflat
