manifests/dev/pinchflat/Ingress-pinchflat.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pinchflat
  namespace: pinchflat
spec:
  ingressClassName: traefik
  rules:
    - host: pinchflat.home.kronkltd.net
      http:
        paths:
          - backend:
              service:
                name: pinchflat
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - pinchflat.home.kronkltd.net
